Add Chat Translator, fixed some bugs